# OpenMowerNext

./: OpenMowerNext_structure.txt  OpenMowerNext_structure_optimized.md  README.md
.github/workflows/: build.yml
config/: robot_localization.yaml
src/open_mower_next/: CMakeLists.txt  package.xml
src/open_mower_next/action/: DockRobot (2).action  DockRobot.action
src/open_mower_next/config/: nav2_params.yaml
src/open_mower_next/description/: mower_robot.urdf.xacro  mower_robot.urdf.xacro.backuop
src/open_mower_next/docking_helper/: charger_presence_charging_dock.hpp
src/open_mower_next/launch/: full_nav_launch.py  gps.launch.py  nav2.launch.py  sim_nav.launch.py  solar_farm_world.launch.py
src/open_mower_next/map_recorder/: main.cpp  map_recorder_node.cpp
src/open_mower_next/map_server/: geo_json_map.cpp  geo_json_map.hpp  map_server_node.cpp  map_server_node.hpp  node_main.cpp
src/open_mower_next/maps/: map.yaml
src/open_mower_next/rviz/: full_nav.rviz
src/open_mower_next/sim/: sim_node.cpp  sim_node.cpp.backup  sim_node.cpp.backup1
src/open_mower_next/test/: test_dock_robot_action.py
src/open_mower_next/worlds/: empty.sdf
worlds/: solar_farm.world  solar_farm.world.backup
