<?xml version="1.0"?>
<package format="3">
  <name>open_mower_next</name>
  <version>0.0.1</version>
  <description>OpenMowerNext ROS2 Humble compatible package</description>

  <maintainer email="guojianying@openmowernext.local">Guo Jianying</maintainer>
  <license>MIT</license>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>

  <!-- Simulation & Visualization -->
  <depend>gazebo_ros</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>

  <!-- Localization & Mapping -->
  <depend>robot_localization</depend>
  <depend>nav2_map_server</depend>

  <!-- Communication -->
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>

  <!-- If using ament_target_dependencies (recommended) -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>builtin_interfaces</depend>


  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!--   <build_depend>rosidl_default_generators</build_depend> -->
  <!--   <exec_depend>rosidl_default_runtime</exec_depend> -->

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>